13388
Given that 
```scala
scala> classOf[Int]
res6: java.lang.Class[Int] = int
```
It should be the case that the following works
```scala
scala> 1.getClass
<console>:5: error: type mismatch;
 found   : Int
 required: ?{val getClass: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2Integer in object Predef of type (Int)java.lang.Integer
 and method intWrapper in object Predef of type (Int)scala.runtime.RichInt
 are possible conversion functions from Int to ?{val getClass: ?}
       1.getClass
       ^
```
